fixed the header buttons alignment and border right for header pic

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,7 @@
   height: 100vh;
   background-size: cover;
   background-position: center;
+  border-right: 0.5em solid #28a745;
 }
 .header-lead{
   color: #131313;
@@ -27,4 +28,10 @@ div h1{
     font-size: 2.2em
   }
 
+}
+
+@media (max-width: 991px) {
+  .head-img{
+    border-right: 0
+  }
 }
